Bug#39711, "Running falcon_bug_34351_C shows increasing memory usage"